--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,8 @@ dependencies = [
     "tavily-python (>=0.7.2,<0.8.0)",
     "wikipedia (>=1.4.0,<2.0.0)",
     "trustcall (>=0.0.39,<0.0.40)",
-    "langgraph-cli[inmem] (>=0.2.10,<0.3.0)"
+    "langgraph-cli[inmem] (>=0.2.10,<0.3.0)",
+    "python-dotenv (>=1.1.0,<2.0.0)"
 ]
 
 [tool.poetry]
